[gd_scene load_steps=11 format=3 uid="uid://ba8bq4ifylh0d"]

[ext_resource type="Script" path="res://gate_bp.gd" id="1_1s635"]
[ext_resource type="Texture2D" uid="uid://bpo4kxg7ch0te" path="res://assets/sprites/door-pixel.png" id="2_7r4k3"]
[ext_resource type="AudioStream" uid="uid://dcp46vf5vtv0p" path="res://assets/sounds/open-door.mp3" id="4_hdxcj"]
[ext_resource type="AudioStream" uid="uid://b5b4jppganei6" path="res://assets/sounds/next_level.mp3" id="6_sv1db"]

[sub_resource type="AtlasTexture" id="AtlasTexture_yks4m"]
atlas = ExtResource("2_7r4k3")
region = Rect2(0, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1plmr"]
atlas = ExtResource("2_7r4k3")
region = Rect2(64, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_s52ft"]
atlas = ExtResource("2_7r4k3")
region = Rect2(128, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cj2xa"]
atlas = ExtResource("2_7r4k3")
region = Rect2(192, 0, 64, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_7km6p"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yks4m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1plmr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s52ft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cj2xa")
}],
"loop": false,
"name": &"open",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oafil"]

[node name="Gate" type="Area2D"]
collision_mask = 2
script = ExtResource("1_1s635")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_7km6p")
animation = &"open"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 12)
shape = SubResource("RectangleShape2D_oafil")

[node name="open_gate_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_hdxcj")
volume_db = 24.0
pitch_scale = 1.5

[node name="right_gate_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_sv1db")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
